--- a/literatures/list.bib
+++ b/literatures/list.bib
@@ -53,6 +53,17 @@
   publisher={IACSIT Press}
 }
 
+@article{maslow1943theory,
+  title={A theory of human motivation.},
+  author={Maslow, Abraham Harold},
+  journal={Psychological review},
+  volume={50},
+  number={4},
+  pages={370},
+  year={1943},
+  publisher={American Psychological Association}
+}
+
 @book{lamport1994latex,
   title={LATEX: a document preparation system: user's guide and reference manual},
   author={Lamport, Leslie},
