--- a/src/ch03-system-design.tex
+++ b/src/ch03-system-design.tex
@@ -256,14 +256,29 @@ The user interface prototype is designed as shown in figure \ref{figure:12}.
 \includegraphics[width=0.8\textwidth]{prototype}
 \end{figure}
 \leavevmode\\
-Explanation page: Some explanations about the User Study \\
-User information page: For inputing personal data, like user id, gender, age and occupation.\\
-User background page: The user will be asked about some background questions, like, how many does he know about Explainable Recommendation System?\\
-Movie preview page: For building User Portraits, system will give user a series of movie posters and names. user can click to select the movies he likes from 6 options (selecting multiple, selecting none in 6 options and selecting all 6 options are allowed). Click the 'REFRESH' button to load the new 6 options. Repeat this selection process until the user has selected a total of 10 movies. \\
-Recommendation round 1: The system will give user a series of recommendation movies and the explanations why these are recommended to the user. The user can click to select the movies he likes and give a score for the explanations. \\
-Recommendation round 2: Same with Recommendation Round One, but the new recommendation movies are based on the user's choices and scores in Recommendation Round One. \\
-Recommendation round 3: Same with Recommendation Round One and Two, but the new recommendation movies are based on the user's choices and scores in Recommendation Round Two. \\
-User feedback page : The user's opinion about recommendation in the 3 test rounds.
+
+
+\begin{table}[h!]
+\renewcommand\arraystretch{1.5}
+\centering
+\begin{tabular}{p{100pt}p{300pt}}\toprule
+ \hline
+ Page & Description \\ [0.5ex] 
+ \hline
+  Explanation page & Some explanations about the User Study \\
+User information page &  For inputing personal data, like user id, gender, age and occupation.\\
+User background page  &  The user will be asked about some background questions, like, how many does he know about Explainable Recommendation System?\\
+Movie preview page  &  For building User Portraits, system will give user a series of movie posters and names. user can click to select the movies he likes from 6 options (selecting multiple, selecting none in 6 options and selecting all 6 options are allowed). Click the 'REFRESH' button to load the new 6 options. Repeat this selection process until the user has selected a total of 10 movies. \\
+Recommendation round 1  &  The system will give user a series of recommendation movies and the explanations why these are recommended to the user. The user can click to select the movies he likes and give a score for the explanations. \\
+Recommendation round 2  &  Same with Recommendation Round One, but the new recommendation movies are based on the user's choices and scores in Recommendation Round One. \\
+Recommendation round 3  &  Same with Recommendation Round One and Two, but the new recommendation movies are based on the user's choices and scores in Recommendation Round Two. \\
+User feedback page   &  The user's opinion about recommendation in the 3 test rounds.\\
+  [1ex] 
+ \hline
+\end{tabular}
+\caption{Prototype Description}
+\label{table:1}
+\end{table}
 
 
 \cleardoublepage
