--- a/theme/lmuthesis.sty
+++ b/theme/lmuthesis.sty
@@ -22,6 +22,7 @@
 \usepackage{epigraph}
 \usepackage{color}
 \usepackage{xcolor}
+\usepackage{arydshln}
 \definecolor{keyword}{HTML}{BA2CA3}
 \definecolor{string}{HTML}{D12F1B}
 \definecolor{comment}{HTML}{008400}
