--- a/src/ch04-experiment.tex
+++ b/src/ch04-experiment.tex
@@ -16,7 +16,7 @@ The statistics of the questionnaire about system evaluation by using likert scal
 \includegraphics[width=1\textwidth]{feedback_question3}
 \end{figure}
 
-Figure \ref{figure:2} presents the results obtained from the preliminary analysis of points for 3 round recommendations from 20 users. We can see that the third round reported more high-points than the other two rounds.
+Figure \ref{figure:2} presents the results obtained from the preliminary analysis of points for 3 round recommendations from 20 users. We can see that the third round reported more high-points than the other two rounds. This shows that in our user study, the average score of users improved through three rounds of explanation adaptation.
 
 \begin{figure}[h]
 \caption{Feedback question about 3 round recommendations}
@@ -33,16 +33,20 @@ Correspondingly, the division of questions for evaluating the recommendation sys
 \begin{table}[h!]
 \renewcommand\arraystretch{1.5}
 \centering
-\begin{tabular}{p{80pt}p{60pt}p{120pt}}\toprule
+\begin{tabular}{p{100pt}p{60pt}p{200pt}}\toprule
  \hline
  System Evaluation & Question & Result \\ [0.5ex] 
  \hline
-  Satisfaction & Q6,Q8 & ...  \\
-  Accuracy  & Q9,Q10 & ... \\ 
-  Diversity & Q14 & ... \\
-  Novelty & Q15 & ... \\
-  Surprise & Q16 & ... \\
-  Trust & Q17 & ... \\
+  Satisfaction & Q8 & More than half of users choose a neutral attitude (12 in 20)  \\
+   \cdashline{1-3}[0.8pt/2pt]
+    & Q7 & 7 users agree that the system recommend the right movies.\\
+  Accuracy  & Q9 & 6 users agree that the system has recommended what they expect. \\
+    & Q10 & 3 users agree that the system has recommended what they really need. \\
+    \cdashline{1-3}[0.8pt/2pt]
+  Diversity & Q14 & 5 users agree \\
+  Novelty & Q15 & 5 users agree \\
+  Surprise & Q16 & 7 users agree \\
+  Trust & Q17 & 3 users agree \\
   [1ex] 
  \hline
 \end{tabular}
@@ -50,10 +54,13 @@ Correspondingly, the division of questions for evaluating the recommendation sys
 \label{table:1}
 \end{table}
 
-\paragraph{Confidence}
-\paragraph{Transparency}
-\paragraph{Satisfaction}
-\paragraph{Persuasiveness}
+\paragraph{Confidence:}
+\paragraph{Transparency:}
+\paragraph{Satisfaction:}
+\paragraph{Accuracy:}
+Comparing the three questions about accuracy ( Q7, Q9, Q10), we can find a very interesting phenomenon. Some users said that the recommendation system recommended the right movies to them, but they thought that the recommendation system did not recommend the movies they really expected and needed.
+\par As Abraham argues in \cite{maslow1943theory} about Maslow's hierarchy of needs, from low to high, human needs are divided into physiological needs, safety needs, social needs, esteem and self-actualization needs.
+\par Most recommendation systems, including our recommendation system, often recommend things that users may be interested in based on some data and records. This is certainly the right recommendation, but sometimes it may not be what users really expect and demand. The recommended things only satisfy the user's physiological needs, safety needs, and social needs. And higher-level esteem and self-actualization needs may become one of the possible development directions of future recommendation systems research area.
 	
 \subsection{Result analysis}
 
