--- a/src/ch01-intro.tex
+++ b/src/ch01-intro.tex
@@ -3,8 +3,16 @@
 
 \epigraph{That men do not learn very much from the lessons of history is the most important of all the lessons that history has to teach.}{Aldous Huxley}
 
-\subsection{History of \LaTeX}
+\subsection{Interaction Between People and Internet}
+We can divide the scenario where people interact with the Internet into three situations as shown in figure \ref{figure:1}
 
-The first release of \LaTeX \cite{lamport1994latex} appeared in 1983 \cite{lamport2007writings}.
+\begin{figure}[h]
+\caption{Interaction styles between people and Internet}
+\label{figure:1}
+\centering
+\includegraphics[width=0.8\textwidth]{people_internet_interaction}
+\end{figure}
+
+\subsection{Recommendation Engine}
 
 \cleardoublepage
