--- a/theme/lmuthesis.sty
+++ b/theme/lmuthesis.sty
@@ -203,7 +203,7 @@
     selbstst\"andig angefertigt, alle Zitate als solche kenntlich gemacht
     sowie alle benutzten Quellen und Hilfsmittel angegeben habe.
 
-    \bigskip\noindent M\"unchen, \today
+    \bigskip\noindent M\"unchen, March 02,2020
     \vspace{4ex}\noindent\makebox[7cm]{\dotfill}
     \cleardoublepage
 }
