--- a/literatures/list.bib
+++ b/literatures/list.bib
@@ -1,3 +1,17 @@
+@techreport{balabanovic1996adaptive,
+  title={An adaptive agent for automated web browsing},
+  author={Balabanovic, Marko and Shoham, Yoav and Yun, Yeogirl},
+  year={1996},
+  institution={Stanford InfoLab}
+}
+
+@article{zhang2018explainable,
+  title={Explainable recommendation: A survey and new perspectives},
+  author={Zhang, Yongfeng and Chen, Xu},
+  journal={arXiv preprint arXiv:1804.11192},
+  year={2018}
+}
+
 @incollection{ketkar2017introduction,
   title={Introduction to pytorch},
   author={Ketkar, Nikhil},
