--- a/literatures/list.bib
+++ b/literatures/list.bib
@@ -1,3 +1,61 @@
+@incollection{ricci2011introduction,
+  title={Introduction to recommender systems handbook},
+  author={Ricci, Francesco and Rokach, Lior and Shapira, Bracha},
+  booktitle={Recommender systems handbook},
+  pages={1--35},
+  year={2011},
+  publisher={Springer}
+}
+
+@inproceedings{mcauley2015image,
+  title={Image-based recommendations on styles and substitutes},
+  author={McAuley, Julian and Targett, Christopher and Shi, Qinfeng and Van Den Hengel, Anton},
+  booktitle={Proceedings of the 38th International ACM SIGIR Conference on Research and Development in Information Retrieval},
+  pages={43--52},
+  year={2015}
+}
+
+@inproceedings{hamilton2017inductive,
+  title={Inductive representation learning on large graphs},
+  author={Hamilton, Will and Ying, Zhitao and Leskovec, Jure},
+  booktitle={Advances in neural information processing systems},
+  pages={1024--1034},
+  year={2017}
+}
+
+@inproceedings{sarwar2001item,
+  title={Item-based collaborative filtering recommendation algorithms},
+  author={Sarwar, Badrul and Karypis, George and Konstan, Joseph and Riedl, John},
+  booktitle={Proceedings of the 10th international conference on World Wide Web},
+  pages={285--295},
+  year={2001}
+}
+
+@article{cleger2012top,
+  title={Top-N news recommendations in digital newspapers},
+  author={Cleger-Tamayo, Sergio and Fern{\'a}ndez-Luna, Juan M and Huete, Juan F},
+  journal={Knowledge-Based Systems},
+  volume={27},
+  pages={180--189},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@inproceedings{duvenaud2015convolutional,
+  title={Convolutional networks on graphs for learning molecular fingerprints},
+  author={Duvenaud, David K and Maclaurin, Dougal and Iparraguirre, Jorge and Bombarell, Rafael and Hirzel, Timothy and Aspuru-Guzik, Al{\'a}n and Adams, Ryan P},
+  booktitle={Advances in neural information processing systems},
+  pages={2224--2232},
+  year={2015}
+}
+
+@article{kipf2016semi,
+  title={Semi-supervised classification with graph convolutional networks},
+  author={Kipf, Thomas N and Welling, Max},
+  journal={arXiv preprint arXiv:1609.02907},
+  year={2016}
+}
+
 @techreport{balabanovic1996adaptive,
   title={An adaptive agent for automated web browsing},
   author={Balabanovic, Marko and Shoham, Yoav and Yun, Yeogirl},
@@ -10,6 +68,24 @@
   author={Zhang, Yongfeng and Chen, Xu},
   journal={arXiv preprint arXiv:1804.11192},
   year={2018}
+}
+
+@article{merton1968matthew,
+  title={The Matthew effect in science: The reward and communication systems of science are considered},
+  author={Merton, Robert K},
+  journal={Science},
+  volume={159},
+  number={3810},
+  pages={56--63},
+  year={1968},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{anderson2004long,
+  title={Long tail},
+  author={Anderson, Chris and Andersson, Mia Poletto},
+  year={2004},
+  publisher={Bonnier fakta}
 }
 
 @incollection{ketkar2017introduction,
@@ -37,13 +113,23 @@
   year={2019}
 }
 
-@inproceedings{sarwar2001item,
-  title={Item-based collaborative filtering recommendation algorithms},
-  author={Sarwar, Badrul and Karypis, George and Konstan, Joseph and Riedl, John},
-  booktitle={Proceedings of the 10th international conference on World Wide Web},
-  pages={285--295},
-  year={2001}
+@inproceedings{he2015trirank,
+  title={Trirank: Review-aware explainable recommendation by modeling aspects},
+  author={He, Xiangnan and Chen, Tao and Kan, Min-Yen and Chen, Xiao},
+  booktitle={Proceedings of the 24th ACM International on Conference on Information and Knowledge Management},
+  pages={1661--1670},
+  year={2015}
 }
+
+@inproceedings{heckel2017scalable,
+  title={Scalable and interpretable product recommendations via overlapping co-clustering},
+  author={Heckel, Reinhard and Vlachos, Michail and Parnell, Thomas and D{\"u}nner, Celestine},
+  booktitle={2017 IEEE 33rd International Conference on Data Engineering (ICDE)},
+  pages={1033--1044},
+  year={2017},
+  organization={IEEE}
+}
+
 
 @article{ahn2006utilizing,
   title={Utilizing popularity characteristics for product recommendation},
@@ -78,16 +164,10 @@
   publisher={American Psychological Association}
 }
 
-@book{lamport1994latex,
-  title={LATEX: a document preparation system: user's guide and reference manual},
-  author={Lamport, Leslie},
-  year={1994},
-  publisher={Addison-wesley}
-}
-@article{lamport2007writings,
-  title={The Writings of Leslie Lamport: LaTeX: A Document Preparation System},
-  author={Lamport, Leslie},
-  journal={Avible: Leslie Lamport's Home Page. Retrieved},
-  pages={04--27},
-  year={2007}
+@inproceedings{wu2016deep,
+  title={Deep convolutional neural network with independent softmax for large scale face recognition},
+  author={Wu, Yue and Li, Jun and Kong, Yu and Fu, Yun},
+  booktitle={Proceedings of the 24th ACM international conference on Multimedia},
+  pages={1063--1067},
+  year={2016}
 }
