--- a/src/ch04-experiment.tex
+++ b/src/ch04-experiment.tex
@@ -5,6 +5,8 @@
 \epigraph{That men do not learn very much from the lessons of history is the most important of all the lessons that history has to teach.}{Aldous Huxley}
 
 \subsection{User Study Process}
+Let users use our recommendation system, record their feedback and answers to the questionnaires, and analyze data to evaluate the performance and interpretability of our recommendation system.
+\par After reading the explanations about the user study, users will input some personal data (user id, gender, age and occupation) and then answer some background questions. For building user Pprtraits, system will give user a series of movie posters and names. user can click to select the movies he likes from 6 options. Click the ?REFRESH? button to load the new 6 options and repeat this selection process until the user has selected a total of 10 movies. After that, the system will give user a series of recommendation movies and the explanations why these are recommended to the user. The user can click to select the movies he likes and give a score for the explanations. Repeat this recommendation step three times. Finally, the user will be required to answer some feedback questions.
 
 \subsection{likert Scale}
 The statistics of the questionnaire about system evaluation by using likert scale are shown in figure \ref{figure:1}.
