--- a/theme/lmuthesis.sty
+++ b/theme/lmuthesis.sty
@@ -126,6 +126,7 @@
 \newcommand{\profName}{}
 \newcommand{\professor}[1]{\renewcommand{\profName}{#1}}
 
+
 % paper title
 \newcommand{\titleName}{}
 \renewcommand{\title}[1]{\renewcommand{\titleName}{#1}}
@@ -183,7 +184,7 @@
     \begin{tabular}{ll}
     Bearbeitungszeitraum: & \bearbeitungszeitraumText \\
     Betreuer: & \supervisorName \\
-    Verantw. Hochschullehrer: & \profName
+    Verantw. Hochschullehrer: & Prof.\ Dr.\ Andreas\ Butz
     \end{tabular}
     \clearpage
 }
